# gtest

./: .gitignore  CTest.md  README.md
MyProject/: CMakeLists.txt  calculator.h  test_calculator.cpp
